<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="niccolosponza.gioiellisponza.Generale">

    <TextView
        android:id="@+id/Email_Titolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@android:color/holo_purple"
        android:layout_marginTop="30dp"
        android:textSize="10pt"
        android:text="@string/Email_Titolo" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/Email_A_Testo"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:text="@string/Email_A" />

        <TextView
            android:id="@+id/Email_A"
            android:layout_weight="10"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/Email_Da_Testo"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:text="@string/Email_Da_Testo" />

        <EditText
            android:id="@+id/Email_Da"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="10"
            android:hint="@string/Email_Da"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <EditText
        android:id="@+id/Testo"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/Email_Corpo" />

    <Button
        android:id="@+id/Email_Invia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Email_Corpo"
        android:padding="10dp"
        android:background="@android:color/holo_blue_light"/>

</LinearLayout>